feat: 消息接收开关
